Updated solution to part 1

--- a/Part1/part1-components-solution.json
+++ b/Part1/part1-components-solution.json
@@ -3,6 +3,7 @@
         "id": "component:input",
         "name": "input",
         "out": [
+            "component:input/Location",
             "component:input/DirectionQuery",
             "component:input/Time"
         ]
